// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render 1`] = `
<div>
  <div
    class="sc-AxirZ foACTB"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 1
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 2
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render empty rows if template not provided 1`] = `
<div>
  <div
    class="sc-AxirZ foACTB"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 1
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 2
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;
